# Wifisync

./: .clippy.toml  .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.production.yml  docker-compose.yml  project-description.txt  rustfmt.toml
.beads/: issues.jsonl
.github/workflows/: android-tests.yml  e2e-tests.yml
android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/com/wifisync/android/: ActivityLifecycleTest.kt  ComposeUiInteractionTest.kt  InvalidPasswordTest.kt  JniLibraryLoadingTest.kt  LiveSyncApiTest.kt  LiveSyncE2eTest.kt  LiveSyncTestConfig.kt  LiveSyncUiTest.kt  MainActivityInstrumentedTest.kt  NavigationInteractionTest.kt  SettingsScreenTest.kt
android/app/src/androidTest/java/com/wifisync/android/wifi/: PermissionHandlerInstrumentedTest.kt  SuggestionTrackerInstrumentedTest.kt  WifiManagerWrapperInstrumentedTest.kt  WifiSuggestionEndToEndTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/wifisync/android/: MainActivity.kt  WifisyncApplication.kt  WifisyncCore.kt
android/app/src/main/java/com/wifisync/android/ui/theme/: Theme.kt  Type.kt
android/app/src/main/java/com/wifisync/android/wifi/: PermissionHandler.kt  SuggestionTracker.kt  WifiManagerWrapper.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
android/app/src/test/java/com/wifisync/android/: WifisyncCoreTest.kt
android/app/src/test/java/com/wifisync/android/wifi/: SuggestionTrackerTest.kt  WifiExceptionTest.kt
android/scripts/: run-emulator-tests.sh
crates/wifisync-cli/: Cargo.toml
crates/wifisync-cli/src/: main.rs
crates/wifisync-cli/src/commands/: agent.rs  collection.rs  exclude.rs  export.rs  import.rs  install.rs  list.rs  mod.rs  show.rs  status.rs  sync.rs  uninstall.rs
crates/wifisync-core/: Cargo.toml
crates/wifisync-core/src/: agent.rs  crypto.rs  error.rs  filter.rs  lib.rs  management.rs  models.rs  storage.rs
crates/wifisync-core/src/adapter/: android.rs  mod.rs  networkmanager.rs
crates/wifisync-core/src/sync/: client.rs  encryption.rs  mod.rs  state.rs
crates/wifisync-core/tests/: agent_integration.rs  dbus_integration.rs  networkmanager_integration.rs  sync_client_integration.rs
crates/wifisync-core/tests/common/: mod.rs
crates/wifisync-jni/: Cargo.toml
crates/wifisync-jni/src/: lib.rs
crates/wifisync-server/: Cargo.toml
crates/wifisync-server/src/: config.rs  error.rs  main.rs
crates/wifisync-server/src/api/: auth.rs  mod.rs  routes.rs
crates/wifisync-server/src/api/handlers/: auth.rs  collections.rs  conflicts.rs  mod.rs  sync.rs
crates/wifisync-server/src/db/: mod.rs  models.rs  queries.rs
crates/wifisync-server/src/sync/: conflict.rs  mod.rs
crates/wifisync-server/tests/: sync_integration.rs
crates/wifisync-sync-protocol/: Cargo.toml
crates/wifisync-sync-protocol/src/: api.rs  error.rs  lib.rs  sync_change.rs  vector_clock.rs
openspec/: project.md
openspec/changes/add-android-support/: design.md  proposal.md  tasks.md
openspec/changes/add-android-support/specs/android-credential-delivery/: spec.md
openspec/changes/add-android-support/specs/credential-extraction/: spec.md
openspec/changes/add-android-support/specs/credential-storage/: spec.md
openspec/changes/add-android-support/specs/platform-abstraction/: spec.md
openspec/changes/add-core-architecture/: design.md  proposal.md  tasks.md
openspec/changes/add-core-architecture/specs/credential-extraction/: spec.md
openspec/changes/add-core-architecture/specs/credential-filtering/: spec.md
openspec/changes/add-core-architecture/specs/credential-sharing/: spec.md
openspec/changes/add-core-architecture/specs/credential-storage/: spec.md
openspec/changes/add-core-architecture/specs/platform-abstraction/: spec.md
openspec/changes/add-core-architecture/specs/profile-management/: spec.md
openspec/changes/add-core-architecture/specs/secret-agent/: spec.md
packaging/: build-deb-server.sh  build-deb.sh  build-rpm-server.sh  build-rpm.sh  build.sh
packaging/deb-server/debian/: changelog  control  copyright  postinst  postrm  rules
packaging/deb/debian/: changelog  control  copyright  rules  wifisync.install
packaging/docker/: Dockerfile.fedora  Dockerfile.ubuntu  deb-entrypoint.sh  rpm-entrypoint.sh
packaging/rpm/: wifisync-server.spec  wifisync.spec
packaging/systemd/: wifisync-agent.service  wifisync-server.service
tests/e2e/: Cargo.toml  docker-compose.e2e.yml  run-e2e.sh
tests/e2e/src/: lib.rs
tests/e2e/tests/: e2e_cli.rs  jwt_e2e.rs
