[workspace]
resolver = "2"
members = [
    "crates/wifisync-core",
    "crates/wifisync-cli",
    "crates/wifisync-jni",
    "crates/wifisync-sync-protocol",
    "crates/wifisync-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bkero/wifisync"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Encryption
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"

# Secret handling
secrecy = { version = "0.8", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# D-Bus (Linux)
zbus = "4.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Logging
log = "0.4"

# HTTP client (for sync)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Web framework (for sync server)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database (for sync server)
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

# JWT authentication
jsonwebtoken = "9"

# Password hashing (server-side)
bcrypt = "0.15"

# HKDF for key derivation hierarchy
hkdf = "0.12"
sha2 = "0.10"

# Internal crates
wifisync-core = { path = "crates/wifisync-core", default-features = true }
wifisync-sync-protocol = { path = "crates/wifisync-sync-protocol" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
