[package]
name = "wifisync"
description = "CLI for Wifisync wifi credential synchronization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "wifisync"
path = "src/main.rs"

[dependencies]
wifisync-core = { workspace = true }

# Async
tokio = { workspace = true }

# CLI
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }

# Serialization (for --json output)
serde_json = { workspace = true }

# Secret handling
secrecy = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
