[package]
name = "wifisync"
description = "CLI for Wifisync wifi credential synchronization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "wifisync"
path = "src/main.rs"

[dependencies]
wifisync-core = { workspace = true, features = ["sync"] }

# Async
tokio = { workspace = true }

# CLI
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }

# Serialization (for --json output)
serde_json = { workspace = true }

# Secret handling
secrecy = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Password input
rpassword = "7"

# Directory handling
directories = { workspace = true }

# Hostname detection
hostname = "0.4"

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
base64 = "0.21"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
