[package]
name = "wifisync-core"
description = "Core library for Wifisync wifi credential synchronization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Encryption
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }

# Secret handling
secrecy = { workspace = true }

# D-Bus (Linux only)
zbus = { workspace = true, optional = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
base64 = "0.21"
glob = "0.3"

[features]
default = ["networkmanager"]
networkmanager = ["dep:zbus"]
# Android support - enables JNI bridge types and WifiConfigStore parsing
android = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.10"

[lints]
workspace = true
