[package]
name = "wifisync-server"
description = "Sync server for Wifisync credential synchronization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "wifisync-server"
path = "src/main.rs"

[dependencies]
# Internal crates
wifisync-sync-protocol = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3.10"
reqwest = { workspace = true }

[lints]
workspace = true
