[package]
name = "e2e-helpers"
version = "0.0.0"
edition = "2021"
publish = false

# Library crate for shared test helpers
[lib]
name = "e2e_helpers"
path = "src/lib.rs"

[[test]]
name = "e2e_cli"
path = "tests/e2e_cli.rs"

[dependencies]
serde_json = "1.0"
tempfile = "3.10"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

[lints.rust]
unsafe_code = "forbid"
